<resources>
    <string name="app_name">ShoppingList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deletar">DELETAR</string>
    <string name="textoExemplo">machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta standard a industriei încă din secolul al XVI-lea, când un tipograf anonim a luat o planşetă de litere şi le-a amestecat pentru a crea o carte demonstrativă pentru literele respective. Nu doar că a supravieţuit timp de cinci se</string>
    <string name="itemInserido">Item Inserido com Sucesso!</string>
    <string name="digite_algum_item">Digite algum item</string>
    <string name="adicionar">Adicionar</string>
    <string name="limpar_lista">Limpar Lista</string>
    <string name="mensagem_lista_limpa">Sua lista foi limpa</string>
    <string name="mensagem_item_deletado">Seu item foi deletado</string>
    <string name="rs">R$</string>
    <string name="x">X</string>
    <string name="logo_do_app">Logo do app</string>
    <string name="shopping_list_app">Shopping List App</string>
    //Loggin
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="successRegister">Register Successful</string>
    <string name="errorRegister">Register Error</string>
    <string name="errorPasswordValidation">Password Invalid</string>
    <string name="errorEmailValidation">Email Invalid</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_requirements">*Senha deve ter no minímo 6 caracteres sendo um especial, 4 digitos numericos, e 1 letra maiúscula</string>
    <string name="register_now">Register Now!</string>
    <string name="success_login">User Logged In</string>
    <string name="error_login">User not logged in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>

</resources>