<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AdaptertList">

    <TextView
        android:id="@+id/txvItensId"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="14sp"
        tools:text="@string/textoExemplo"
        />

    <TextView
        android:id="@+id/txvValorItemId"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textSize="14sp"
        android:hint="@string/rs" />

    <Button
        android:id="@+id/btnDeletarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x"
        android:textSize="14sp"
        />

</LinearLayout>